# Mastering-Rust

./: README.md
Chapter01/: arrays.rs  conditionals.rs  enums-and-match  enums-and-match-without-debug-trait.rs  enums-and-match.rs  first-program.rs  hashmap.rs  ifexpression.rs  loop.rs  semicolon.rs  slices.rs  struct.rs  structmethods.rs  tuples.rs  tuplestruct.rs  use  use-without-use.rs  use.rs  variables.rs  vec.rs  while.rs  wordcounter.rs
Chapter02/cargo-example/: Cargo.toml
Chapter03/: ignore-test.rs  panic-test.rs  test.rs
Chapter04/: array-slicing.rs  display-trait.rs  fixed-array-example.rs  generic-function.rs  generic-struct.rs  into-impl.rs  mutable-string.rs  passing-string-slices.rs  statics.rs  std-trait-impls.rs  string-slices.rs  trait-object.rs
Chapter05/: catch_unwind.rs  custom-error-1.rs  custom-error-2.rs  mapping.rs  panic.rs  qmark.rs  result-1.rs  result-unwrapping.rs  try-main.rs  try.rs
Chapter06/: add-1.ll  add-2.ll  add-2.rs  blocks.rs  borrows-1.rs  borrows-2.rs  borrows-3.rs  drops.rs  functions-with-borrows-1.rs  functions-with-borrows-2.rs  functions.rs  interior-mutability.rs  lifetime-structs.rs  meep.py  mem-introspection.rs  multiple-cells.rs  multiple-move-types-with-refcell-1.rs  multiple-move-types-with-refcell-2.rs  multiple-move-types.rs  multiple-owners.rs  rc-1.rs  rc-2.rs  stack-1.rs  stack-2.rs  stack-abuse.c  stack-overflow.c
Chapter07/: channels-1.rs  channels-2.rs  closures-1.rs  closures-2.rs  mutex-arc.rs  mutex-rc.rs  mutexes-1.rs  mutexes-2.rs  sharing-immutables.rs  threads-1.rs
Chapter12/arena-web/: Cargo.toml
Chapter12/arena-web/src/: main.rs
Chapter12/arena-web/static/css/: style.css
Chapter12/arena-web/templates/: game.hbs  index.hbs
Chapter13/diesel-test/: .env  Cargo.toml
Chapter13/diesel-test/migrations/20170212154505_create_person/: down.sql  up.sql
Chapter13/diesel-test/src/: lib.rs  main.rs  models.rs
Chapter13/postgres-r2d2-test/: Cargo.toml
Chapter13/postgres-r2d2-test/src/: main.rs
(+75 files in other folders)
