[package]
name = "arena-web"
version = "0.1.0"
authors = ["Vesa Kaihlavirta <vegai@iki.fi>"]

[dependencies]
rocket = "0.2"
rocket_codegen = "0.2"
rocket_contrib = { version = "0.2", default-features = false, features = ["handlebars_templates"] }
lazy_static = "0.2"
rand = "0.3"
serde = "0.9"
serde_derive = "0.9"
time = "0.1"
